# agile-agent-program

./: .env.sample  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  langgraph.json  pyproject.toml
docs/: PRD.md
docs/adr/: 0001-sdd-parser-as-dedicated-node.md  0002-sqlite-checkpointer.md  0003-dark-factories-as-langgraph-subgraphs.md  0004-langgraph-interrupt-for-escalation.md
docs/agents/: issue-tracker.md
src/program_layer/: config.py  graph.py  main.py
src/program_layer/agents/: contract_gate.py  parser.py  pm.py  pmo.py
src/program_layer/nodes/: interrupt.py
src/program_layer/schemas/: __init__.py  models.py
src/program_layer/stubs/: factory_a.py  factory_b.py
tests/: test_contract_gate.py  test_graph.py  test_interrupt.py  test_parser.py  test_pm.py  test_pmo.py  test_stub_routing.py
