[project]
name = "program-layer"
version = "0.1.0"
description = "LangGraph orchestration layer for agile agent delivery"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langsmith>=0.2.0",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
program-layer = "program_layer.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/program_layer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.0",
]
